--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="nothing_found">Ничего не найдено</string>
+    <string name="user_age_years">%1\$d %2\$s</string>
 </resources>
