--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">UsersApp</string>
     <string name="nothing_found">Nothing found</string>
+    <string name="user_age_years">%1\$d %2\$s</string>
 </resources>
